force-app/main/default/objects/Member_Branch__c/Member_Branch__c.object-meta.xml
<CustomObject>
    <label>Member Branch</label>
    <pluralLabel>Member Branches</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <nameField>
        <displayFormat>MB-{0000}</displayFormat>
        <label>Branch Number</label>
        <type>AutoNumber</type>
    </nameField>
</CustomObject>