force-app/main/default/objects/Member_Branch__c/fields/Branch_Status__c.field-meta.xml
<CustomField>
    <fullName>Branch_Status__c</fullName>
    <label>Branch Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Active</fullName>
                <default>true</default>
                <label>Active</label>
            </value>
            <value>
                <fullName>Suspended</fullName>
            </value>
            <value>
                <fullName>Deactivated</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>