force-app/main/default/objects/Member_Branch__c/fields/Member__c.field-meta.xml
<CustomField>
    <fullName>Member__c</fullName>
    <label>Member</label>
    <referenceTo>Member__c</referenceTo>
    <relationshipLabel>Member Branches</relationshipLabel>
    <relationshipName>MemberBranches</relationshipName>
    <type>MasterDetail</type>
</CustomField>