force-app/main/default/objects/Member_Branch__c/validationRules/Suspension_Date_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>Suspension_Date_Required</fullName>
    <active>true</active>
    <description>Require suspension date when branch is suspended</description>
    <errorConditionFormula>
        ISPICKVAL(Branch_Status__c, "Suspended")&amp;&amp;
        ISBLANK(Suspension_Date__c)
    </errorConditionFormula>
    <errorMessage>Suspension Date is required when Branch Status is Suspended.</errorMessage>
</ValidationRule>